--- a/homework-1/index.html
+++ b/homework-1/index.html
@@ -26,6 +26,7 @@
     git cherry-pick - Команда git cherry-pick берёт изменения, вносимые одним коммитом, и пытается повторно применить их в виде нового коммита в текущей ветке. Эта возможность полезна в ситуации, когда нужно забрать парочку коммитов из другой ветки, а не сливать ветку целиком со всеми внесенными в нее изменениями.
     git stash - сохраняет неподтвержденные изменения (индексированные и неиндексированные) в отдельном хранилище, чтобы вы могли вернуться к ним позже. Затем происходит откат до исходной рабочей копии. 
     .gitignore нужен для скрытия файлов и папок от системы контроля версий Git.-->
+    <div class="list-block"></div>
     <script src="js/script.js"></script>
 </body>
 </html>
