--- a/homework-4/index.html
+++ b/homework-4/index.html
@@ -13,7 +13,7 @@
 		<title>HW4</title>
 	</head>
 	<body>
-		<div class="content"><span>Home work 4</span></div>
+		<div class="content"><p>Home work 4</p></div>
 		<script src="js/script.js"></script>
 	</body>
 </html>
