--- a/homework-10/index.html
+++ b/homework-10/index.html
@@ -43,12 +43,12 @@
 			</div>
 		</div>
 
-		<audio class="audio" id="KeyS" src="audio/Avalanche.mp3"></audio>
-		<audio class="audio" id="KeyD" src="audio/Bass.mp3"></audio>
-		<audio class="audio" id="KeyF" src="audio/Bell.mp3"></audio>
-		<audio class="audio" id="KeyG" src="audio/Hockey.mp3"></audio>
-		<audio class="audio" id="KeyA" src="audio/Icq.mp3"></audio>
+		<audio class="audio KeyS" src="audio/Avalanche.mp3"></audio>
+		<audio class="audio KeyD" src="audio/Bass.mp3"></audio>
+		<audio class="audio KeyF" src="audio/Bell.mp3"></audio>
+		<audio class="audio KeyG" src="audio/Hockey.mp3"></audio>
+		<audio class="audio KeyA" src="audio/Icq.mp3"></audio>
 
-		<script src="js/dcript.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
