folders structure change

--- a/homeworks-js/homework-1/index.html
+++ b/homeworks-js/homework-1/index.html
@@ -1,13 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
-</head>
-<body>
-    <!-- $ git config --global user.name "[имя]" - Устанавливает имя, которое будет отображаться в поле автора у выполняемых вами коммитов.
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
+		<title>test</title>
+	</head>
+	<body>
+		<!-- $ git config --global user.name "[имя]" - Устанавливает имя, которое будет отображаться в поле автора у выполняемых вами коммитов.
     $ git config --global user.email "[адрес электронной почты]" - Устанавливает адрес электронной почты, который будет отображаться в информации о выполняемых вами коммитах.
     $ git init [название проекта] - Создаёт новый локальный репозиторий с заданным именем.
     $ git status - Перечисляет все новые или изменённые файлы, которые нуждаются в фиксации.
@@ -26,7 +37,7 @@
     git cherry-pick - Команда git cherry-pick берёт изменения, вносимые одним коммитом, и пытается повторно применить их в виде нового коммита в текущей ветке. Эта возможность полезна в ситуации, когда нужно забрать парочку коммитов из другой ветки, а не сливать ветку целиком со всеми внесенными в нее изменениями.
     git stash - сохраняет неподтвержденные изменения (индексированные и неиндексированные) в отдельном хранилище, чтобы вы могли вернуться к ним позже. Затем происходит откат до исходной рабочей копии. 
     .gitignore нужен для скрытия файлов и папок от системы контроля версий Git.-->
-    <div class="list-block"></div>
-    <script src="js/script.js"></script>
-</body>
+		<div class="list-block"></div>
+		<script src="js/script.js"></script>
+	</body>
 </html>
